--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <h2>p1: W/S</h2>
             <h2>p2: UP/DOWN</h2>
         </div>
-        <h3>SPACEBAR TO START OR PAUSE THE TENNIS</h3>
-        <h3>R TO RETART</h3>
+        <h3>SPACEBAR TO START OR PAUSE THE GAME</h3>
+        <h3>R TO RESTART</h3>
     </div>
     <script src="./src/main.js" type="module"></script>
 </body>
